have no idea how, but partly works